--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -74,7 +74,7 @@
                               </TableView>
                            </children>
                         </Pane>
-                        <Pane fx:id="itemField" layoutX="341.0" layoutY="92.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="419.0">
+                        <Pane fx:id="itemField" layoutX="341.0" layoutY="92.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="419.0" visible="false">
                            <children>
                               <Button fx:id="addToCart" layoutX="141.0" layoutY="347.0" mnemonicParsing="false" onAction="#toCart" prefHeight="37.0" prefWidth="164.0" text="Add to Cart" />
                               <BorderPane fx:id="imgViewer" layoutX="94.0" layoutY="18.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="178.0" prefWidth="259.0" style="-fx-border-color: #8da9ff; -fx-border-width: 10; -fx-border-radius: 5;" />
@@ -133,17 +133,17 @@
                      <children>
                         <Pane layoutX="2.0" layoutY="2.0" prefHeight="529.0" prefWidth="798.0">
                            <children>
-                              <Pane layoutX="21.0" layoutY="29.0" prefHeight="454.0" prefWidth="320.0">
+                              <Pane layoutX="21.0" layoutY="9.0" prefHeight="509.0" prefWidth="320.0">
                                  <children>
-                                    <TableView fx:id="CartTableView" layoutX="42.0" layoutY="20.0" onMouseClicked="#CartTableClicked" prefHeight="306.0" prefWidth="236.0" style="-fx-background-color: #92accc; -fx-background-radius: 5;">
+                                    <TableView fx:id="CartTableView" layoutX="42.0" layoutY="75.0" onMouseClicked="#CartTableClicked" prefHeight="306.0" prefWidth="236.0" style="-fx-background-color: #92accc; -fx-background-radius: 5;">
                                        <columns>
                                           <TableColumn fx:id="CartFoodCol" editable="false" prefWidth="153.0" sortable="false" text="Food" />
                                           <TableColumn fx:id="CartPriceCol" editable="false" minWidth="5.0" prefWidth="43.0" sortable="false" text="Price" />
                                           <TableColumn fx:id="CartAmtCol" editable="false" prefWidth="39.0" sortable="false" text="Amt" />
                                        </columns>
                                     </TableView>
-                                    <Button fx:id="cartRemove" layoutX="42.0" layoutY="402.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="159.0" text="Remove Selected" />
-                                    <BorderPane layoutX="42.0" layoutY="340.0" prefHeight="43.0" prefWidth="236.0" style="-fx-background-color: #b0c4de; -fx-border-width: 8; -fx-border-color: #8da9ff;">
+                                    <Button fx:id="cartRemove" layoutX="42.0" layoutY="457.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="159.0" text="Remove Selected" />
+                                    <BorderPane layoutX="42.0" layoutY="395.0" prefHeight="43.0" prefWidth="236.0" style="-fx-background-color: #b0c4de; -fx-border-width: 8; -fx-border-color: #8da9ff;">
                                        <center>
                                           <Label fx:id="totalPriceView" alignment="CENTER" prefHeight="30.0" prefWidth="236.0" style="-fx-background-color: #92accc;" text="Total: $0.00" BorderPane.alignment="CENTER">
                                              <font>
@@ -151,24 +151,30 @@
                                              </font></Label>
                                        </center>
                                     </BorderPane>
-                                    <Pane fx:id="questionBar" layoutX="21.0" layoutY="14.0" prefHeight="51.0" prefWidth="269.0" visible="false">
+                                    <Pane fx:id="questionBar" layoutX="42.0" layoutY="14.0" prefHeight="51.0" prefWidth="237.0" visible="false">
                                        <children>
-                                          <Button fx:id="questionyesBar" layoutX="32.0" layoutY="22.0" mnemonicParsing="false" onAction="#questionHitYes" prefHeight="25.0" prefWidth="84.0" text="Yes" />
-                                          <Button fx:id="questionNoBar" layoutX="145.0" layoutY="24.0" mnemonicParsing="false" onAction="#questionHitNo" prefHeight="25.0" prefWidth="84.0" text="No" />
-                                          <Label alignment="TOP_CENTER" layoutX="23.0" layoutY="2.0" prefHeight="17.0" prefWidth="225.0" text="Remove All?" textAlignment="CENTER" />
+                                          <Button fx:id="questionyesBar" layoutX="20.0" layoutY="24.0" mnemonicParsing="false" onAction="#questionHitYes" prefHeight="25.0" prefWidth="84.0" text="Yes" />
+                                          <Button fx:id="questionNoBar" layoutX="128.0" layoutY="24.0" mnemonicParsing="false" onAction="#questionHitNo" prefHeight="25.0" prefWidth="84.0" text="No" />
+                                          <Label alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" prefHeight="17.0" prefWidth="225.0" text="Remove All?" textAlignment="CENTER" textFill="WHITE">
+                                             <font>
+                                                <Font name="Arial" size="16.0" />
+                                             </font></Label>
                                        </children>
                                     </Pane>
-                                    <Pane fx:id="clearPane" layoutX="21.0" layoutY="7.0" prefHeight="56.0" prefWidth="269.0" visible="false">
+                                    <Pane fx:id="clearPane" layoutX="42.0" layoutY="7.0" prefHeight="56.0" prefWidth="237.0" visible="false">
                                        <children>
-                                          <Button fx:id="clearButtonYes" layoutX="29.0" layoutY="26.0" mnemonicParsing="false" onAction="#clearYes" prefHeight="25.0" prefWidth="92.0" text="Yes" />
-                                          <Button fx:id="clearButtonNo" layoutX="142.0" layoutY="26.0" mnemonicParsing="false" onAction="#clearNo" prefHeight="25.0" prefWidth="92.0" text="No" />
-                                          <Label fx:id="clearLabel" layoutX="103.0" layoutY="6.0" prefHeight="17.0" prefWidth="59.0" text="Clear cart?" />
+                                          <Button fx:id="clearButtonYes" layoutX="16.0" layoutY="26.0" mnemonicParsing="false" onAction="#clearYes" prefHeight="25.0" prefWidth="92.0" text="Yes" />
+                                          <Button fx:id="clearButtonNo" layoutX="129.0" layoutY="26.0" mnemonicParsing="false" onAction="#clearNo" prefHeight="25.0" prefWidth="92.0" text="No" />
+                                          <Label fx:id="clearLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="64.0" prefHeight="20.0" prefWidth="110.0" text="Clear cart?" textFill="WHITE">
+                                             <font>
+                                                <Font name="Arial" size="16.0" />
+                                             </font></Label>
                                        </children>
                                     </Pane>
-                                    <Button fx:id="clearCart" layoutX="210.0" layoutY="402.0" mnemonicParsing="false" onAction="#clearCart" prefHeight="38.0" prefWidth="68.0" text="Clear" />
+                                    <Button fx:id="clearCart" layoutX="210.0" layoutY="457.0" mnemonicParsing="false" onAction="#clearCart" prefHeight="38.0" prefWidth="68.0" text="Clear" />
                                  </children>
                               </Pane>
-                              <Pane fx:id="itemField1" layoutX="341.0" layoutY="92.0" prefHeight="398.0" prefWidth="419.0">
+                              <Pane fx:id="itemField1" layoutX="341.0" layoutY="92.0" prefHeight="398.0" prefWidth="419.0" visible="false">
                                  <children>
                                     <BorderPane fx:id="imgViewer1" layoutX="94.0" layoutY="18.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="178.0" prefWidth="259.0" style="-fx-border-color: #8da9ff; -fx-border-width: 10; -fx-border-radius: 5;">
                                        <left>
