--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -142,7 +142,7 @@
                                           <TableColumn fx:id="CartAmtCol" editable="false" prefWidth="39.0" sortable="false" text="Amt" />
                                        </columns>
                                     </TableView>
-                                    <Button fx:id="cartRemove" layoutX="42.0" layoutY="457.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="159.0" text="Remove Selected" />
+                                    <Button fx:id="cartRemove" layoutX="42.0" layoutY="457.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="107.0" text="Remove Selected" />
                                     <BorderPane layoutX="42.0" layoutY="395.0" prefHeight="43.0" prefWidth="236.0" style="-fx-background-color: #b0c4de; -fx-border-width: 8; -fx-border-color: #8da9ff;">
                                        <center>
                                           <Label fx:id="totalPriceView" alignment="CENTER" prefHeight="30.0" prefWidth="236.0" style="-fx-background-color: #92accc;" text="Total: $0.00" BorderPane.alignment="CENTER">
@@ -171,7 +171,8 @@
                                              </font></Label>
                                        </children>
                                     </Pane>
-                                    <Button fx:id="clearCart" layoutX="210.0" layoutY="457.0" mnemonicParsing="false" onAction="#clearCart" prefHeight="38.0" prefWidth="68.0" text="Clear" />
+                                    <Button fx:id="clearCart" layoutX="152.0" layoutY="457.0" mnemonicParsing="false" onAction="#clearCart" prefHeight="38.0" prefWidth="55.0" text="Clear" />
+                                    <Button fx:id="checkoutButton" layoutX="212.0" layoutY="457.0" mnemonicParsing="false" onAction="#checkoutPress" prefHeight="38.0" prefWidth="67.0" text="Checkout" />
                                  </children>
                               </Pane>
                               <Pane fx:id="itemField1" layoutX="341.0" layoutY="92.0" prefHeight="398.0" prefWidth="419.0" visible="false">
@@ -204,6 +205,91 @@
                                        </center>
                                     </BorderPane>
                                     <Polygon fx:id="lTri" fill="#92accc" layoutX="79.0" layoutY="119.0" onMouseClicked="#NextImgL" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="270.0" scaleY="0.3" stroke="#8da9ff" strokeType="INSIDE" strokeWidth="5.0" translateX="-15.0" />
+                                 </children>
+                              </Pane>
+                              <Pane fx:id="checkoutPane" layoutX="341.0" layoutY="90.0" prefHeight="356.0" prefWidth="438.0" style="-fx-border-color: #8da9ff; -fx-border-width: 10;" visible="false">
+                                 <children>
+                                    <Label layoutX="73.0" layoutY="25.0" text="Given amount" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="customerPayed" layoutX="68.0" layoutY="56.0" prefHeight="25.0" prefWidth="118.0" promptText="Enter amount..." />
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="273.0" layoutY="25.0" text="Change" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="customerChange" alignment="CENTER" layoutX="248.0" layoutY="58.0" prefHeight="21.0" prefWidth="101.0" text="put change" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="52.0" layoutY="219.0" text="\$100" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="115.0" layoutY="219.0" text="\$50" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="175.0" layoutY="219.0" text="\$20" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="237.0" layoutY="219.0" text="\$10" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="300.0" layoutY="219.0" text="\$5" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="363.0" layoutY="219.0" text="\$1" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="102.0" layoutY="307.0" text="\$0.25" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="169.0" layoutY="307.0" text="\$0.10" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="230.0" layoutY="307.0" text="\$0.05" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="298.0" layoutY="307.0" text="\$0.01" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="checkoutTotal" alignment="CENTER" layoutX="169.0" layoutY="106.0" prefHeight="21.0" prefWidth="101.0" text="Total: $" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Pane fx:id="hundredPane" layoutX="40.0" layoutY="165.0" prefHeight="54.0" prefWidth="57.0" style="-fx-border-color: #8da9ff;" />
+                                    <Pane fx:id="fiftyPane" layoutX="99.0" layoutY="165.0" prefHeight="54.0" prefWidth="57.0" style="-fx-border-color: #8da9ff;" />
+                                    <Pane fx:id="twentyPane" layoutX="159.0" layoutY="165.0" prefHeight="54.0" prefWidth="57.0" style="-fx-border-color: #8da9ff;" />
+                                    <Pane fx:id="tenPane" layoutX="221.0" layoutY="165.0" prefHeight="54.0" prefWidth="57.0" style="-fx-border-color: #8da9ff;" />
+                                    <Pane fx:id="fivePane" layoutX="280.0" layoutY="165.0" prefHeight="54.0" prefWidth="57.0" style="-fx-border-color: #8da9ff;" />
+                                    <Pane fx:id="onePane" layoutX="343.0" layoutY="165.0" prefHeight="54.0" prefWidth="57.0" style="-fx-border-color: #8da9ff;" />
+                                    <Pane fx:id="tfcentPane" layoutX="91.0" layoutY="253.0" prefHeight="54.0" prefWidth="57.0" style="-fx-border-color: #8da9ff;" />
+                                    <Pane fx:id="tcentPane" layoutX="159.0" layoutY="253.0" prefHeight="54.0" prefWidth="57.0" style="-fx-border-color: #8da9ff;" />
+                                    <Pane fx:id="fcentPane" layoutX="221.0" layoutY="253.0" prefHeight="54.0" prefWidth="57.0" style="-fx-border-color: #8da9ff;" />
+                                    <Pane fx:id="ocentPane" layoutX="287.0" layoutY="253.0" prefHeight="54.0" prefWidth="57.0" style="-fx-border-color: #8da9ff;" />
                                  </children>
                               </Pane>
                            </children>
