--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -51,7 +51,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="562.0" prefWidth="798.0" style="-fx-background-color: #708090;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.mainController">
+<VBox prefHeight="562.0" prefWidth="798.0" style="-fx-background-color: #708090;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.mainController">
   <children>
       <TabPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="566.0" prefWidth="798.0" style="-fx-background-color: #5b647e;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -155,12 +155,11 @@
                                     </BorderPane>
                                     <Pane fx:id="questionBar" layoutX="42.0" layoutY="14.0" prefHeight="51.0" prefWidth="237.0" visible="false">
                                        <children>
-                                          <Button fx:id="questionyesBar" layoutX="20.0" layoutY="24.0" mnemonicParsing="false" onAction="#questionHitYes" prefHeight="25.0" prefWidth="84.0" text="Yes" />
-                                          <Button fx:id="questionNoBar" layoutX="128.0" layoutY="24.0" mnemonicParsing="false" onAction="#questionHitNo" prefHeight="25.0" prefWidth="84.0" text="No" />
-                                          <Label alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" prefHeight="17.0" prefWidth="225.0" text="Remove All?" textAlignment="CENTER" textFill="WHITE">
+                                          <Label alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" prefHeight="25.0" prefWidth="225.0" text="How much do you want to remove?" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                                              <font>
-                                                <Font name="Arial" size="16.0" />
+                                                <Font name="Arial" size="12.0" />
                                              </font></Label>
+                                          <TextField fx:id="removeAmtBar" layoutX="44.0" layoutY="24.0" onKeyPressed="#onkeyAmtBar" />
                                        </children>
                                     </Pane>
                                     <Pane fx:id="clearPane" layoutX="42.0" layoutY="7.0" prefHeight="56.0" prefWidth="237.0" visible="false">
